# rust-dfs

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: dfs.proto  publish.proto
src/: main.rs
src/app/: errors.rs  file_download_service.rs  mod.rs  p2p.rs  server.rs  utils.rs
src/app/cli/: mod.rs
src/app/file_processing/: errors.rs  mod.rs  processing.rs
src/app/file_store/: domain.rs  errors.rs  mod.rs  rocksdb.rs
src/app/grpc/: errors.rs  mod.rs  server.rs
src/app/p2p/: config.rs  domain.rs  errors.rs  events.rs  mod.rs  models.rs  service.rs
src/app/service/: domain.rs  events.rs  mod.rs  service.rs
