[package]
name = "dfs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
libp2p = { version = "0.56.0", features = ["full"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["default", "serde_derive"] }
thiserror = "2.0.18"
tokio-util = "0.7.18"
async-trait = "0.1.89"
env_logger = "0.11.9"
log = "0.4.29"
tonic = "0.14.5"
prost = "0.14.3"
tonic-prost = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14.5"
